# autocutsel

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autocutsel.c  autogen.sh  bootstrap  common.c  common.h  config.h.in  configure  configure.ac  configure.in  cutsel.c  libselsync.c  libselsync.h  libselsync_test.rb  libselsync_test_helper.rb  selsync.c  selsync_test.rb  test_autocutsel.rb
