
bin_PROGRAMS = autocutsel cutsel

autocutsel_SOURCES = autocutsel.c
autocutsel_LDADD   = $(X_PRE_LIBS) $(X_LIBS) $(X_EXTRA_LIBS) -lX11 -lXext -lXt -lXmu -lXaw

cutsel_SOURCES = cutsel.c
cutsel_LDADD   = $(X_PRE_LIBS) $(X_LIBS) $(X_EXTRA_LIBS) -lX11 -lXext -lXt -lXmu -lXaw

INCLUDES = 

EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO

