dnl Process this file with autoconf to produce a configure script.
AC_INIT(autocutsel.c)
AM_INIT_AUTOMAKE(autocutsel,0.6.2)

AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PATH_XTRA
dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AM_WITH_DMALLOC

AC_OUTPUT(Makefile)

