dnl Process this file with autoconf to produce a configure script.
AC_INIT(autocutsel.c)
AM_INIT_AUTOMAKE(autocutsel,0.7.0)

AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PATH_XTRA
if test "$no_x" = "yes"
then
  AC_MSG_ERROR([X libraries must be installed])
fi
AC_CHECK_LIB(Xext, main, LIBS="$LIBS -lXext", [], $X_PRE_LIB $X_LIBS $LIBS -lX11 $X_EXTRA_LIBS)

LIBS="$X_PRE_LIBS $X_LIBS $LIBS -lX11 $X_EXTRA_LIBS"

AC_CHECK_LIB(Xaw, main,[],no_Xaw=yes,-lX11 -lXt)
if test "x$no_Xaw" = xyes; then
  AC_MSG_ERROR(Xaw library must be installed)
fi

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AM_WITH_DMALLOC

AC_OUTPUT(Makefile)

